# uxflows-runner

./: .env.example  .gitignore  AGENTS.md  README.md  RUNNER-PLAN.md  TRANSLATION-POC.md  pyproject.toml
.github/workflows/: cloak_repo_scan.yml
examples/: coffee.json  coffee.txt
scripts/: probe_gemini_tools.py  probe_pipecat_seam.py  probe_text_mode.py
src/uxflows_runner/: __init__.py  cli.py  config.py
src/uxflows_runner/dispatcher/: __init__.py  assigns.py  capabilities.py  expressions.py  flow_state.py  methods.py  processor.py  prompt_builder.py  routing.py  routing_protocol.py  session.py
src/uxflows_runner/events/: __init__.py  emitter.py  schema.py
src/uxflows_runner/server/: app.py  pipeline.py  pipeline_raw.py  text_registry.py  text_session.py
src/uxflows_runner/spec/: __init__.py  loader.py  types.py
tests/: test_apply_route.py  test_assigns.py  test_capabilities.py  test_emitter.py  test_expressions.py  test_flow_state.py  test_fnol_smoke.py  test_interrupts.py  test_methods.py  test_prompt_builder.py  test_route_tag_stripper.py  test_routing.py  test_routing_protocol.py  test_spec_loader.py  test_text_session.py
web/: audio-test.html  audio-test.js  client.js  index.html  style.css  text.css  text.html  text.js
